# ut-app-python-cmake-template

./: README.md  cookiecutter.json
{{cookiecutter.app_name}}/: CMakeLists.txt
{{cookiecutter.app_name}}/python-lib/: CMakeLists.txt
{{cookiecutter.app_name}}/qml/: Main.qml
